Fix for gradient on mobile, changed spacing character screen mobile

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -1,9 +1,6 @@
 html {
   font-size: $base-font-size;
-  min-height: 100%;
-}
-
-body {
+  height: 100%;
   background: $background-gradient;
   background-attachment: fixed;
   color: $primary-font-color;
