--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -53,5 +53,5 @@ h6 { font-size: 2.8rem; letter-spacing: 0; line-height: 1.3; }
   h3 { font-size: 2.2rem; }
   h4 { font-size: 1.8rem; }
   h5 { font-size: 1.4rem; }
-  h6 { font-size: 1.2rem; }
+  h6 { font-size: 1.1rem; }
 }
