--- a/app/assets/stylesheets/components/flipcard.scss
+++ b/app/assets/stylesheets/components/flipcard.scss
@@ -8,11 +8,11 @@
   text-align: center;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   @media (max-width: 550px) {
-    margin: 0 1% 12% 1%;
+    margin: 0 1% 9vh 1%;
   }
-  @media (max-height: 700px) {
-    margin: 0 1% 15% 1%;
-  }
+  // @media (max-height: 700px) {
+  //   margin: 0 1% 15% 1%;
+  // }
   .flipcard-front,
   .flipcard-back {
     -webkit-backface-visibility: hidden;
