--- a/app/assets/stylesheets/pages/character_screen.scss
+++ b/app/assets/stylesheets/pages/character_screen.scss
@@ -13,7 +13,7 @@
     width: 99.5%;
     padding: 50px 0;
     @media (max-width: 550px) {
-      padding: 20px 0;
+      padding: 15px 0;
     }
 	}
 }
