--- a/app/assets/stylesheets/pages/welcome_screen.scss
+++ b/app/assets/stylesheets/pages/welcome_screen.scss
@@ -1,7 +1,7 @@
 #welcome-screen {
   padding-top: 280px;
   @media (max-width: 550px) {
-    padding-top: 200px;
+    padding-top: 180px;
   }
   #play {
     margin:20px;
